update paket.template files

--- a/src/FsPickler.Json/FsPickler.Json.fsproj
+++ b/src/FsPickler.Json/FsPickler.Json.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="JsonSerializer.fs" />
     <Compile Include="Combinators.fs" />
     <None Include="paket.references" />
+    <None Include="paket.template" />
     <None Include="Test.fsx" />
   </ItemGroup>
   <ItemGroup>
