--- a/tests/FsPickler.Core.Tests/FsPickler.Core.Tests.fsproj
+++ b/tests/FsPickler.Core.Tests/FsPickler.Core.Tests.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Configurations>Debug;Release;Release-NoEmit</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\FsPickler.Tests\Utils.fs" />
