--- a/tests/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/tests/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <Configurations>Debug;Release;Release-NoEmit</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Utils.fs" />
