--- a/tests/FsPickler.Core.Tests/FsPickler.Core.Tests.fsproj
+++ b/tests/FsPickler.Core.Tests/FsPickler.Core.Tests.fsproj
@@ -8,11 +8,11 @@
   <ItemGroup>
     <Compile Include="..\FsPickler.Tests\Utils.fs" />
     <Compile Include="..\FsPickler.Tests\FsCheck.fs" />
-    <Compile Include="..\FsPickler.Tests\ISerializer.fs" />
-    <Compile Include="..\FsPickler.Tests\FsPicklerManager.fs" />
     <Compile Include="..\FsPickler.Tests\TestTypes.fs" />
     <Compile Include="..\FsPickler.Tests\GenericTests.fs" />
     <Compile Include="..\FsPickler.Tests\SerializerTests.fs" />
+    <Compile Include="..\FsPickler.Tests\InMemorySerializerTests.fs" />
+    <Compile Include="..\FsPickler.Tests\RemoteSerializerTests.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
