--- a/src/FsPickler.Json.Core/FsPickler.Json.Core.fsproj
+++ b/src/FsPickler.Json.Core/FsPickler.Json.Core.fsproj
@@ -7,6 +7,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netstandard2.0\FsPickler.Json.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\FsPickler.Json.XML</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="..\FsPickler.Json\Common.fs" />
