--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;PROTECT_STACK_OVERFLOWS;EMIT_IL;TUPLE_WORKAROUND</DefineConstants>
+    <DocumentationFile>bin\Debug\net45\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>TRACE;PROTECT_STACK_OVERFLOWS;EMIT_IL;TUPLE_WORKAROUND</DefineConstants>
+    <DocumentationFile>bin\Release\net45\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-NoEmit|AnyCPU'">
     <DefineConstants>TRACE;PROTECT_STACK_OVERFLOWS;TUPLE_WORKAROUND</DefineConstants>
+    <DocumentationFile>bin\Release-NoEmit\net45\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\..\paket-files\eiriktsarpalis\TypeShape\src\TypeShape\TypeShape.fs">
