--- a/src/FsPickler/paket.template
+++ b/src/FsPickler/paket.template
@@ -37,6 +37,7 @@ dependencies
 	System.Reflection.Emit.Lightweight >= LOCKEDVERSION
 excludeddependencies
     SourceLink.Create.CommandLine
+	SourceLink.Embed.PaketFiles
 files
     bin/Release/net45/FsPickler.dll ==> lib/net45
     bin/Release/net45/FsPickler.pdb ==> lib/net45
