--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -6,15 +6,15 @@
     <AssemblyName>FsPickler</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;PROTECT_STACK_OVERFLOWS;EMIT_IL;TUPLE_WORKAROUND</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;PROTECT_STACK_OVERFLOWS;EMIT_IL</DefineConstants>
     <DocumentationFile>bin\Debug\net45\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>TRACE;PROTECT_STACK_OVERFLOWS;EMIT_IL;TUPLE_WORKAROUND</DefineConstants>
+    <DefineConstants>TRACE;PROTECT_STACK_OVERFLOWS;EMIT_IL</DefineConstants>
     <DocumentationFile>bin\Release\net45\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-NoEmit|AnyCPU'">
-    <DefineConstants>TRACE;PROTECT_STACK_OVERFLOWS;TUPLE_WORKAROUND</DefineConstants>
+    <DefineConstants>TRACE;PROTECT_STACK_OVERFLOWS</DefineConstants>
     <DocumentationFile>bin\Release-NoEmit\net45\FsPickler.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
