--- a/tests/FsPickler.Tests/FsPickler.Tests.fsproj
+++ b/tests/FsPickler.Tests/FsPickler.Tests.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
     <Configurations>Debug;Release;Release-NoEmit</Configurations>
   </PropertyGroup>
   <ItemGroup>
@@ -12,6 +12,7 @@
     <Compile Include="SerializerTests.fs" />
     <Compile Include="InMemorySerializerTests.fs" />
     <Compile Include="RemoteSerializerTests.fs" />
+    <Compile Include="Main.fs" />
     <None Include="App.config" />
     <None Include="paket.references" />
   </ItemGroup>
