--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 sudo: false # use the new container-based Travis infrastructure
 dist: trusty # Ubuntu 14.04
 mono: latest
-dotnet: 2.0.0
+dotnet: latest
 
 script:
   - dotnet --info
