--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,11 @@
-os: Visual Studio 2017
-
+image: Visual Studio 2017
+configuration: Release
 init:
   - git config --global core.autocrlf input
-
 build_script:
   - cmd: build.cmd Bundle
-
 test: off
+version: 0.0.1.{build}
 artifacts:
-  - path: bin
-    name: bin
+  - path: artifacts
+    name: artifacts
