--- a/src/FsPickler.Json/paket.template
+++ b/src/FsPickler.Json/paket.template
@@ -35,7 +35,7 @@ excludeddependencies
 files
     bin/Release/net45/FsPickler.Json.dll ==> lib/net45
     bin/Release/net45/FsPickler.Json.pdb ==> lib/net45
-    bin/Release/net45/FsPickler.Json.xml ==> lib/net45
+    bin/Release/net45/FsPickler.Json.XML ==> lib/net45
     bin/Release/netstandard2.0/FsPickler.Json.dll ==> lib/netstandard2.0
     bin/Release/netstandard2.0/FsPickler.Json.pdb ==> lib/netstandard2.0
-    bin/Release/netstandard2.0/FsPickler.Json.xml ==> lib/netstandard2.0
+    bin/Release/netstandard2.0/FsPickler.Json.XML ==> lib/netstandard2.0
