--- a/src/FsPickler/paket.template
+++ b/src/FsPickler/paket.template
@@ -41,7 +41,7 @@ excludeddependencies
 files
     bin/Release/net45/FsPickler.dll ==> lib/net45
     bin/Release/net45/FsPickler.pdb ==> lib/net45
-    bin/Release/net45/FsPickler.xml ==> lib/net45
+    bin/Release/net45/FsPickler.XML ==> lib/net45
     bin/Release/netstandard2.0/FsPickler.dll ==> lib/netstandard2.0
     bin/Release/netstandard2.0/FsPickler.pdb ==> lib/netstandard2.0
-    bin/Release/netstandard2.0/FsPickler.xml ==> lib/netstandard2.0
+    bin/Release/netstandard2.0/FsPickler.XML ==> lib/netstandard2.0
