--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ configuration: Release
 init:
   - git config --global core.autocrlf input
 build_script:
-  - cmd: build.cmd Bundle
+  - cmd: build.cmd -t Bundle
 test: off
 version: 0.0.1.{build}
 artifacts:
