--- a/src/FsPickler.Json/FsPickler.Json.fsproj
+++ b/src/FsPickler.Json/FsPickler.Json.fsproj
@@ -2,6 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\net45\FsPickler.Json.XML</DocumentationFile>
@@ -18,7 +20,6 @@
     <Compile Include="JsonSerializer.fs" />
     <Compile Include="Combinators.fs" />
     <None Include="paket.references" />
-    <None Include="paket.template" />
     <None Include="Test.fsx" />
   </ItemGroup>
   <ItemGroup>
