--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -5,6 +5,7 @@
     <Configurations>Debug;Release;Release-NoEmit</Configurations>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;PROTECT_STACK_OVERFLOWS;EMIT_IL</DefineConstants>
